// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: ItinerariesOneWay.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RouteStopFragment on RouteStop {
  time {
    utc
    local
  }
}

{
  searchOneWayItineraries(input: {
  order: ASC,
  sort: QUALITY,
  passengers: {
    adults: 1,
    children: 0,
    infants: 0,
  },
  itinerary: {
    origin: {
      ids: ["prague_cz"],
    },
    destination: {
      ids: ["STN"],
    },
    outboundDate: {
      start: "2019-05-01",
      end: "2019-05-03",
    },
  },
}, first: 1) {
    edges {
      node {
        id
        sectors {
          duration
          stopoverDuration
          segments {
            departure {
              ...RouteStopFragment
            }
            arrival {
              ...RouteStopFragment
            }
          }
          departure {
            ...RouteStopFragment
          }
          arrival {
            ...RouteStopFragment
          }
        }
      }
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "searchOneWayItineraries": {
      "edges": [
        {
          "node": {
            "id": "SXRpbmVyYXJ5OjM5OTEyMjc5NzgyMjAxMTlfMHwzOTE1MzYxNjAzMzExMTg1XzB8ODc3NjMwMTgzOTg2NDEyM18wfDEyMzQ1MzE2NjE2NTYxNjc4XzA=",
            "sectors": [
              {
                "duration": 3435,
                "stopoverDuration": null,
                "segments": [
                  {
                    "departure": {
                      "time": {
                        "utc": "2019-03-01T17:45:00.000Z",
                        "local": "2019-03-01T18:45:00.000Z"
                      }
                    },
                    "arrival": {
                      "time": {
                        "utc": "2019-03-01T18:50:00.000Z",
                        "local": "2019-03-01T19:50:00.000Z"
                      }
                    }
                  },
                  {
                    "departure": {
                      "time": {
                        "utc": "2019-03-02T14:15:00.000Z",
                        "local": "2019-03-02T15:15:00.000Z"
                      }
                    },
                    "arrival": {
                      "time": {
                        "utc": "2019-03-03T00:45:00.000Z",
                        "local": "2019-03-02T19:45:00.000Z"
                      }
                    }
                  },
                  {
                    "departure": {
                      "time": {
                        "utc": "2019-03-03T03:55:00.000Z",
                        "local": "2019-03-02T22:55:00.000Z"
                      }
                    },
                    "arrival": {
                      "time": {
                        "utc": "2019-03-03T07:24:00.000Z",
                        "local": "2019-03-03T02:24:00.000Z"
                      }
                    }
                  },
                  {
                    "departure": {
                      "time": {
                        "utc": "2019-03-03T23:50:00.000Z",
                        "local": "2019-03-03T18:50:00.000Z"
                      }
                    },
                    "arrival": {
                      "time": {
                        "utc": "2019-03-04T03:00:00.000Z",
                        "local": "2019-03-03T22:00:00.000Z"
                      }
                    }
                  }
                ],
                "departure": {
                  "time": {
                    "utc": "2019-03-01T17:45:00.000Z",
                    "local": "2019-03-01T18:45:00.000Z"
                  }
                },
                "arrival": {
                  "time": {
                    "utc": "2019-03-04T03:00:00.000Z",
                    "local": "2019-03-03T22:00:00.000Z"
                  }
                }
              }
            ]
          }
        }
      ]
    }
  }
}
`;

exports[`matches expected output: ItinerariesReturn.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RouteStopFragment on RouteStop {
  time {
    utc
    local
  }
}

{
  searchReturnItineraries(input: {
  order: ASC,
  sort: QUALITY,
  passengers: {
    adults: 1,
    children: 0,
    infants: 0,
  },
  itinerary: {
    origin: {
      ids: ["prague_cz"],
    },
    destination: {
      ids: ["STN"],
    },
    outboundDate: {
      start: "2019-05-01",
      end: "2019-05-03",
    },
    inboundDate: {
      start: "2019-05-25",
      end: "2019-05-28"
    }
  },
}, first: 1) {
    edges {
      node {
        id
        sectors {
          duration
          stopoverDuration
          segments {
            departure {
              ...RouteStopFragment
            }
            arrival {
              ...RouteStopFragment
            }
          }
          departure {
            ...RouteStopFragment
          }
          arrival {
            ...RouteStopFragment
          }
        }
      }
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "searchReturnItineraries": {
      "edges": [
        {
          "node": {
            "id": "SXRpbmVyYXJ5OjM5OTEyMjc5NzgyMjAxMTlfMHwzOTE1MzYxNjAzMzExMTg1XzB8ODc3NjMwMTgzOTg2NDEyM18wfDEyMzQ1MzE2NjE2NTYxNjc4XzA=",
            "sectors": [
              {
                "duration": 3435,
                "stopoverDuration": null,
                "segments": [
                  {
                    "departure": {
                      "time": {
                        "utc": "2019-03-01T17:45:00.000Z",
                        "local": "2019-03-01T18:45:00.000Z"
                      }
                    },
                    "arrival": {
                      "time": {
                        "utc": "2019-03-01T18:50:00.000Z",
                        "local": "2019-03-01T19:50:00.000Z"
                      }
                    }
                  },
                  {
                    "departure": {
                      "time": {
                        "utc": "2019-03-02T14:15:00.000Z",
                        "local": "2019-03-02T15:15:00.000Z"
                      }
                    },
                    "arrival": {
                      "time": {
                        "utc": "2019-03-03T00:45:00.000Z",
                        "local": "2019-03-02T19:45:00.000Z"
                      }
                    }
                  },
                  {
                    "departure": {
                      "time": {
                        "utc": "2019-03-03T03:55:00.000Z",
                        "local": "2019-03-02T22:55:00.000Z"
                      }
                    },
                    "arrival": {
                      "time": {
                        "utc": "2019-03-03T07:24:00.000Z",
                        "local": "2019-03-03T02:24:00.000Z"
                      }
                    }
                  },
                  {
                    "departure": {
                      "time": {
                        "utc": "2019-03-03T23:50:00.000Z",
                        "local": "2019-03-03T18:50:00.000Z"
                      }
                    },
                    "arrival": {
                      "time": {
                        "utc": "2019-03-04T03:00:00.000Z",
                        "local": "2019-03-03T22:00:00.000Z"
                      }
                    }
                  }
                ],
                "departure": {
                  "time": {
                    "utc": "2019-03-01T17:45:00.000Z",
                    "local": "2019-03-01T18:45:00.000Z"
                  }
                },
                "arrival": {
                  "time": {
                    "utc": "2019-03-04T03:00:00.000Z",
                    "local": "2019-03-03T22:00:00.000Z"
                  }
                }
              }
            ]
          }
        }
      ]
    }
  }
}
`;
